# osdialog

./: CMakeLists.txt  Makefile  README.md  osdialog.c  osdialog.h  osdialog_cocoa.m  osdialog_gtk.c  osdialog_gtk2.c  osdialog_gtk3.c  osdialog_mac.m  osdialog_win.c  osdialog_zenity.c  test.c
src/: osdialog_gtk2.c  osdialog_gtk3.c  osdialog_mac.m  osdialog_win.c  osdialog_zenity.c
